// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`size when custom config is provided when the custom config overrides a value should replace the default value 1`] = `
Object {
  "height": Object {
    "auto": Object {
      "height": "auto",
    },
    "full": Object {
      "height": "100%",
    },
    "half": Object {
      "height": "50%",
    },
    "large": Object {
      "height": "8rem",
    },
    "medium": Object {
      "height": "4rem",
    },
    "quarter": Object {
      "height": "25%",
    },
    "small": Object {
      "height": "10rem",
    },
    "threeQuarters": Object {
      "height": "75%",
    },
    "view": Object {
      "height": "100vw",
    },
  },
  "width": Object {
    "auto": Object {
      "width": "auto",
    },
    "fifth": Object {
      "width": "20%",
    },
    "fourFifths": Object {
      "width": "80%",
    },
    "full": Object {
      "width": "100%",
    },
    "half": Object {
      "width": "50%",
    },
    "quarter": Object {
      "width": "25%",
    },
    "third": Object {
      "width": "33.3333333333%",
    },
    "threeFifths": Object {
      "width": "60%",
    },
    "threeQuarters": Object {
      "width": "75%",
    },
    "twoFifths": Object {
      "width": "40%",
    },
    "twoThirds": Object {
      "width": "66.6666666666%",
    },
    "view": Object {
      "width": "100vw",
    },
  },
}
`;

exports[`size when custom config is provided when the custom config provides a new value should add the value 1`] = `
Object {
  "height": Object {
    "auto": Object {
      "height": "auto",
    },
    "full": Object {
      "height": "100%",
    },
    "half": Object {
      "height": "50%",
    },
    "large": Object {
      "height": "8rem",
    },
    "medium": Object {
      "height": "4rem",
    },
    "quarter": Object {
      "height": "25%",
    },
    "small": Object {
      "height": "2rem",
    },
    "threeQuarters": Object {
      "height": "75%",
    },
    "view": Object {
      "height": "100vw",
    },
  },
  "width": Object {
    "auto": Object {
      "width": "auto",
    },
    "fifth": Object {
      "width": "20%",
    },
    "fourFifths": Object {
      "width": "80%",
    },
    "full": Object {
      "width": "100%",
    },
    "half": Object {
      "width": "50%",
    },
    "quarter": Object {
      "width": "25%",
    },
    "tenth": Object {
      "width": "10%",
    },
    "third": Object {
      "width": "33.3333333333%",
    },
    "threeFifths": Object {
      "width": "60%",
    },
    "threeQuarters": Object {
      "width": "75%",
    },
    "twoFifths": Object {
      "width": "40%",
    },
    "twoThirds": Object {
      "width": "66.6666666666%",
    },
    "view": Object {
      "width": "100vw",
    },
  },
}
`;

exports[`size when no custom config is provided should return the default config 1`] = `
Object {
  "height": Object {
    "auto": Object {
      "height": "auto",
    },
    "full": Object {
      "height": "100%",
    },
    "half": Object {
      "height": "50%",
    },
    "large": Object {
      "height": "8rem",
    },
    "medium": Object {
      "height": "4rem",
    },
    "quarter": Object {
      "height": "25%",
    },
    "small": Object {
      "height": "2rem",
    },
    "threeQuarters": Object {
      "height": "75%",
    },
    "view": Object {
      "height": "100vw",
    },
  },
  "width": Object {
    "auto": Object {
      "width": "auto",
    },
    "fifth": Object {
      "width": "20%",
    },
    "fourFifths": Object {
      "width": "80%",
    },
    "full": Object {
      "width": "100%",
    },
    "half": Object {
      "width": "50%",
    },
    "quarter": Object {
      "width": "25%",
    },
    "third": Object {
      "width": "33.3333333333%",
    },
    "threeFifths": Object {
      "width": "60%",
    },
    "threeQuarters": Object {
      "width": "75%",
    },
    "twoFifths": Object {
      "width": "40%",
    },
    "twoThirds": Object {
      "width": "66.6666666666%",
    },
    "view": Object {
      "width": "100vw",
    },
  },
}
`;
